# time_calculator

./: .gitignore  Makefile  README.md  pyproject.toml
tests/: test_time_calc.py
time_calc/: time_calculate.py  welcome.py
time_calc/scripts/: runner.py
