[tool.poetry]
name = "time-calculator"
version = "0.1.0"
description = ""
authors = ["HoldCarter <holdcarter@holdcarter.ru>"]
readme = "README.md"
packages = [{include = "time_calculator"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.3.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
